# tpt-formal-lab

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  spec.txt  todo.md
.github/workflows/: ci.yml
out-smt-bridge/: Cargo.toml  README.md
out-smt-bridge/src/: counter_example.rs  expr.rs  lib.rs  smtlib2.rs  solver.rs  sort.rs
out-verify-macros/: Cargo.toml  README.md
out-verify-macros/src/: lib.rs
out-verify-macros/tests/: contracts.rs
tpt-det-proptest/: Cargo.toml  README.md
tpt-det-proptest/src/: check.rs  lib.rs  rng.rs  strategy.rs
tpt-det-proptest/tests/: prop.rs
tpt-deterministic-sim/: Cargo.toml  README.md
tpt-deterministic-sim/src/: fixed_point.rs  lib.rs  sim.rs
tpt-exact-math/: Cargo.toml  README.md
tpt-exact-math/src/: interval.rs  lib.rs  rational.rs
tpt-proof-ast/: Cargo.toml  README.md
tpt-proof-ast/src/: builder.rs  expr.rs  kinds.rs  lib.rs
tpt-redundancy/: Cargo.toml  README.md
tpt-redundancy/src/: lib.rs  vote.rs
tpt-redundancy/tests/: vote.rs
tpt-smt-bridge/: Cargo.toml  README.md
tpt-smt-bridge/src/: counter_example.rs  expr.rs  lib.rs  smtlib2.rs  solver.rs  sort.rs
tpt-trace-macros/: Cargo.toml  README.md
tpt-trace-macros/src/: lib.rs
tpt-trace-macros/tests/: traces.rs
tpt-verified-algorithms/: Cargo.toml  README.md
tpt-verified-algorithms/src/: lib.rs  predicates.rs  search.rs  sort.rs
tpt-verified-algorithms/tests/: algorithms.rs
tpt-verified-ode/: Cargo.toml  LICENSE-APACHE  README.md
tpt-verified-ode/src/: lib.rs  solver.rs
tpt-verified-ode/tests/: solver.rs
tpt-verify-macros/: Cargo.toml  LICENSE-MIT  README.md
tpt-verify-macros/src/: lib.rs
tpt-verify-macros/tests/: contracts.rs
