[workspace]
members = [
    "tpt-exact-math",
    "tpt-proof-ast",
    "tpt-verify-macros",
    "tpt-deterministic-sim",
    "tpt-smt-bridge",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tpt-rs/tpt-formal-lab"
homepage = "https://github.com/tpt-rs/tpt-formal-lab"
authors = ["TPT Contributors"]

[workspace.dependencies]
# External
num-bigint = { version = "0.4", default-features = false }
num-traits = { version = "0.2", default-features = false }
num-integer = { version = "0.1", default-features = false }
proc-macro2 = "1"
syn = { version = "2", features = ["full"] }
quote = "1"
rustc-hash = { version = "2", default-features = false }

# Workspace crates
tpt-exact-math = { path = "tpt-exact-math", version = "0.1.0" }
tpt-proof-ast  = { path = "tpt-proof-ast",  version = "0.1.0" }
