[package]
name = "tpt-trace-macros"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Attribute macro that traces which requirements a function implements"
keywords = ["tracing", "requirements", "macros", "procedural-macro", "documentation"]
categories = ["development-tools::procedural-macro-helpers", "development-tools"]
documentation = "https://docs.rs/tpt-trace-macros"
readme = "README.md"
exclude = ["/spec.txt", "/.github"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
syn = { workspace = true }
quote = { workspace = true }
